# FastWindX

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  MANIFESTbackup.txt  Makefile  README.md  build.sh  cleanup.sh  cli.py  info.md  pyproject.toml  remove_package.sh  requirements.txt  run.sh  setup.py
docs/: CI.md
fastwindx/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  tailwind.config.js
fastwindx/app/: __init__.py  cli.py  cli_v2.py  main.py
fastwindx/app/api/: deps.py
fastwindx/app/api/v1/: api.py
fastwindx/app/api/v1/endpoints/: users.py
fastwindx/app/core/: config.py  exceptions.py  security.py
fastwindx/app/db/: base.py
fastwindx/app/db/models/: user.py
fastwindx/app/schemas/: user.py
fastwindx/app/static/css/: main.css
fastwindx/app/templates/: base.html  index.html  landing.html
fastwindx/app/templates/auth/: login.html  register.html
fastwindx/app/templates/card_templates/: card_01.html  card_02.html  card_03.html  card_04.html  card_05.html  card_06.html  card_07.html  card_08.html  card_09.html  card_10.html  card_11.html  card_12.html  card_13.html  divider_header.html
fastwindx/app/templates/components/: sidebar.html
fastwindx/app/views/: main.py
src/: Dockerfile  README.md  docker-compose.yml  package.json  requirements.txt  tailwind.config.js
src/fastwindx/: __init__.py  main.py
src/fastwindx/api/: deps.py
src/fastwindx/api/v1/: api.py
src/fastwindx/api/v1/endpoints/: users.py
src/fastwindx/core/: config.py  security.py
src/fastwindx/db/: base.py
src/fastwindx/schemas/: user.py
src/fastwindx/static/css/: main.css
src/fastwindx/templates/auth/: login.html  register.html
src/fastwindx/templates/components/: sidebar.html
src/fastwindx/views/: main.py
